[package]
name = "hull-plugin"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio.workspace = true
solana-geyser-plugin-interface = "1.10.2"
solana-program.workspace = true
log.workspace = true
solana-logger = "2.0.5"
